--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.1",
+    "three": "^0.110.0"
   },
   "devDependencies": {
     "prettier": "^1.19.0"
